GEODE-8548 Avoid hostname resolution in TcpConn

- Calling get_host_name() in TcpConn::connect involves a system call that
   might take several seconds to complete.
 - So endpoint is stored instead upon TcpConn construction and used later
   instead of making the system call.